# marvin

./: README.md  flake.nix
cli/: default.nix  flake.nix  pyproject.toml
cli/src/: lib.py  main.py  private.py
cli/src/modules/: cpp.py  go.py
configs/ds/: config.yml  extra_pkgs.nix
configs/pcp/: config.yml  pcp.yml
courses/ds/: config.yml  default.nix
courses/pcp/: config.yml  default.nix
devEnv/: cpp.nix
dev_env/: util.nix
doc/: setup.md
scripts/: activate  install_nix  uninstall_nix
