[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="cli"
version="0.1.0"
dependencies = [
  "click",
  "gitpython",
  "pytimeparse",
  "pyyaml",
  "rich",
  "rich-click",
]

[project.optional-dependencies]
private = [
  "requests",
  "urllib3",
  "python-gitlab",
  "tqdm",
]

[project.scripts]
cli = "main:main"
